# agent-passport

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.history/: .gitignore_20260709195158  README_20260709202635.md
docs/: blockchain-roadmap.md
docs/superpowers/plans/: 2026-07-09-agent-passport-foundation.md
docs/superpowers/specs/: 2026-07-09-agent-passport-foundation-design.md
examples/passport-output/: agent-passport.json  normalized-identity.json  passport-metadata.json  proof-receipt.json
rust/: Cargo.toml
rust/crates/agent-passport-api/: Cargo.toml
rust/crates/agent-passport-api/src/: lib.rs  main.rs
rust/crates/agent-passport-core/: Cargo.toml
rust/crates/agent-passport-core/src/: lib.rs
scripts/metadata/: build-passport-metadata.mjs  explain-passport-transport.mjs
