[workspace]
members = [
  "crates/agent-passport-core",
  "crates/agent-passport-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/vexera-core/agent-passport"

[workspace.dependencies]
agent-passport-core = { path = "crates/agent-passport-core" }
axum = "0.7"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5"

