[package]
name = "agent-passport-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local offchain Agent Passport API for frontend development."

[dependencies]
agent-passport-core.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tower.workspace = true

